# cppm-diplom

src/: CMakeLists.txt  Ts.h  aSession.cpp  aSession.h
src/TSlib/: CMakeLists.txt
